<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.lili.businesscard.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/picture" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:lines="6"
            android:text="@string/centruDeFrumusere"
            android:textColor="@color/colorText1"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_centerHorizontal="true"
            android:text="@string/hetty"
            android:textColor="@color/colorText1"
            android:textSize="@dimen/text_high"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:layout_centerHorizontal="true"
            android:paddingBottom="80dp"
            android:text="@string/coafor_cosmetica_machiaj"
            android:textAllCaps="true"
            android:textColor="@color/colorText2"
            android:textSize="@dimen/text_medium"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/text4"
            style="@style/contactText"
            android:layout_below="@+id/text3"
            android:text="@string/address" />

        <TextView
            android:id="@+id/text5"
            style="@style/contactText"
            android:layout_below="@+id/text4"
            android:text="@string/telephone" />

        <TextView
            android:id="@+id/text6"
            style="@style/contactText"
            android:layout_below="@+id/text5"
            android:text="@string/web_address" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text6"
            android:scaleType="fitCenter"
            android:src="@drawable/picture2" />

    </RelativeLayout>
</ScrollView>
